Setup Rubocop checks in local env

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore node_modules
+node_modules/
+
 # Ignore makefile
 makefile
