--- a/config/database.yml
+++ b/config/database.yml
@@ -23,25 +23,25 @@ default: &default
 
 development:
   <<: *default
-  database: rails_blog_app_development
+  database: blogdb
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: rails_blog_app
+  username: postgres
 
   # The password associated with the postgres role (username).
-  #password:
+  password: test
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  port: 5433
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails_blog_app_test
+  database: postgres
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: rails_blog_app_production
-  username: rails_blog_app
-  password: <%= ENV["RAILS_BLOG_APP_DATABASE_PASSWORD"] %>
+  database: testing_rails_production
+  username: testing_rails
+  password: <%= ENV["TESTING_RAILS_DATABASE_PASSWORD"] %>
